# forge

./: .env.example  .genie-welcome-draft-raw.json  .gitignore  .gitmodules  .mcp.json  .release-notes-v0.4.6.md  .temp-release-notes.md  AGENTS.md  AGENTS.md.TEMPLATE  ARCHIVE_FIX_COMPLETE.md  ARCHIVE_FIX_SUMMARY.md  ARCHIVE_WORKTREE_INVESTIGATION.md  AUTHENTICATION.md  BACKEND_REQUIREMENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.TEMPLATE  CONTRIBUTING.md  Cargo.dev-core.toml  Cargo.toml  DEEP_ARCHIVE_ANALYSIS.md  DEVELOPER.md  DIVERGENCE_REPORT.md  Dockerfile  Dockerfile.builder  FIXES_SUMMARY.md  GENIE_ARCHITECTURE_FIXES.md  GENIE_WIDGET_ENHANCEMENT_PLAN.md  GENIE_WIDGET_FEATURE_PARITY.md  GIT_OPS_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  MASTER_RC_PLAN.md  MIGRATION-STATUS.md  MIGRATION.md  MIGRATION_EVALUATION.md  MISSING_FEATURES_REPORT.md  Makefile  OMNI_BACKEND_TODO.md  PLAYWRIGHT-QUICKSTART.md  QA-TASK3-VALIDATION-REPORT.md  (+30 more)
.cargo/: config.base.toml  config.dev-core.toml  config.toml
.claude/commands/: wish.md
.genie/: README.md  UPDATE.md  plan.md  wish.md
.genie/agents/: README.md  analyze.md  forge-coder.md  forge-hooks.md  forge-quality.md  forge.md  garbage-cleaner.md  garbage-collector.md  github-issue-gc.md  plan.md  review.md  semantic-analyzer.md  update.md  wish.md
.genie/agents.old/: forge-master.md  forge-qa-tester.md  forge-self-learn.md  forge-tests.md
.genie/architecture/: frontend-backend-split.md
.genie/cli/: agent.js  agent.yaml  config.yaml
.genie/code/: AGENTS.md
.genie/design-system/: unified-design-system.md
.genie/neurons/: gemini.md
.genie/product/: tech-stack.md
.genie/reports/: bug-report-sqlx-offline-dev-script-202511090209.md  done-implementor-task-c-22-202510071733.md  done-implementor-task-c-23-202510072034.md
.genie/scripts/: forge-task-link.cjs  (+4 more)
analysis/: conflict-patterns.md  integration-points.md  task2-design.md  task2-inventory.md  upstream-as-library-todo.md  upstream-divergence-report.md
android/: .gitignore  README.md  gradle.properties  settings.gradle
cypress/: PROMPT_GUIDE.md  README.md  tsconfig.json
dev_assets_seed/: config.json
docs/: DUAL_REPO_WORKFLOW.md  RUNNER-OPTIMIZATION-REPORT.md  enhanced-rebrand-script-guide.md  posthog-analytics-dashboards.md  posthog-analytics-implementation.md  posthog-debugging.md  posthog-source-maps-setup.md  rebrand-script-analysis.md  rebrand-script-complete-issues.md  task-2-completion-report.md  task1-compliance-audit.md  task3-completion-report.md  task3-qa-report.md  upstream-as-library-foundation.md  upstream-diff-latest.txt  upstream-v113-namastex-9-snapshot.md  upstream-v114-upgrade-analysis.md
forge-app/: Cargo.dev-core.toml  Cargo.toml  build.rs  openapi.yaml
forge-app/examples/: test_genie_discovery.rs  test_profile_names.rs
forge-app/migrations/: 001_auxiliary_tables.sql  002_migrate_branch_template_data.sql  002_migrate_data.sql  002_migrate_existing_data.sql  20250920000000_create_forge_aux_tables.sql  20250920000001_migrate_branch_templates.sql  20250920000002_remove_branch_template_from_tasks.sql  20250924090000_add_branch_template_column.sql  20250924090001_auxiliary_tables.sql  20250924090002_migrate_data.sql  20250924090003_omni_triggers.sql  20251007000001_global_forge_settings.sql  20251027000000_create_forge_agents.sql  20251105120000_create_forge_task_attempt_config.sql
forge-app/src/: android.rs  lib.rs  main.rs  router.rs  routes.rs  services.rs  version.rs
forge-app/src/mcp/: task_server.rs
forge-app/src/routes/: agents.rs  attempts.rs  config.rs  frontend.rs  mod.rs  omni.rs  projects.rs  state.rs  tasks.rs
forge-app/src/services/: config_service.rs  container_ext.rs  deployment.rs  genie_profiles.rs  mod.rs  notification_hook.rs  profile_cache.rs  task_service.rs  tests.rs
forge-crates/forge-deployment/: Cargo.toml
forge-crates/forge-server/: Cargo.toml
forge-extensions/branch-templates/: Cargo.toml
forge-extensions/branch-templates/migrations/: 001_create_forge_task_extensions.sql
forge-extensions/branch-templates/src/: lib.rs  service.rs  store.rs  template_processor.rs  types.rs
forge-extensions/branch-templates/src/models/: template.rs
forge-extensions/config/: Cargo.dev-core.toml  Cargo.toml
forge-extensions/config/bindings/: BetaFeature.ts  FeatureMaturity.ts
forge-extensions/config/src/: beta_features.rs  lib.rs  service.rs  types.rs  v7.rs  versions.rs
forge-extensions/config/src/config/versions/: v2.rs  v3.rs  v6.rs
forge-extensions/config/src/schema/: forge_config.rs  mod.rs
forge-extensions/config/src/versions/: v4.rs  v5.rs  v7.rs
forge-extensions/omni/: Cargo.toml
forge-extensions/omni/src/: client.rs  lib.rs  mod.rs  service.rs  types.rs
forge-extensions/omni/src/services/: notifications.rs
forge-extensions/omni/tests/: client_tests.rs
forge-main/: beta-features.toml
forge-overrides/: README.md
frontend/: .env.example  .eslintrc.cjs  PERFORMANCE.md  QA-PR246-REALTIME-PERFORMANCE.md  README.md  eslint.config.js  forge.sqlite  index.html  knip.config.ts  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1763146732469-a4c1ec337c89d.mjs  vitest.config.ts
frontend-OLD-DELETE-AFTER-TESTING/: vite.config.ts
frontend-forge/: .eslintrc.json  README.md  index.html  package.json  vite.config.ts
npx-cli/: .npmignore  README.md  package-lock.json  package.json
scripts/: build-android.sh  bump-forge-core.sh  bump.cjs  check-port-conflict.js  check-versions.sh  create-automagik-package.sh  create-forge-task-from-diff.mjs  dev-core-helper.sh  dev-with-dynamic-ports.js  ensure-submodules.js  generate-cypress-tests.mjs  mcp_test.js  prepare-db.js  promote-rc-to-stable.sh  publish-automagik.sh  publish-npm.sh  rebrand.sh  run-forge-regression.sh  setup-dev-environment.js  setup-fork-sync.sh  setup-windows-runner.ps1  sync-upstream-assets.js  sync-upstream.sh  sync-versions.js  unified-release.cjs  validate-icu-pin.sh
shared/: forge-types.ts  types.ts
tests/: FRAMEWORK-COMPARISON.md
upstream/: README.md
(+762 files in other folders)
