[workspace]
resolver = "2"
members = [
    # Forge extension crates
    "forge-extensions/config",
    "forge-extensions/omni",
    # Forge app
    "forge-app",
]

[workspace.package]
version = "0.8.7-rc.24"
edition = "2024"
license = "MIT"
repository = "https://github.com/namastexlabs/forge-core"
homepage = "https://github.com/namastexlabs/forge-core"
authors = ["Namastex Labs <genie@namastex.ai>"]
keywords = ["forge", "task", "execution", "agent", "ai"]
categories = ["development-tools"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
# Use ts-rs-forge from crates.io (namastexlabs fork with use_ts_enum)
ts-rs-forge = { version = "11.0.1", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }

# forge-core workspace dependencies (required for dev-core mode)
rmcp = { version = "0.10.0" }

# Internal forge-core crates (for workspace inheritance in dev-core mode)
forge-core-utils = { path = "forge-core/crates/utils" }
forge-core-executors = { path = "forge-core/crates/executors" }
forge-core-db = { path = "forge-core/crates/db" }
forge-core-services = { path = "forge-core/crates/services" }
forge-core-deployment = { path = "forge-core/crates/deployment" }
forge-core-local-deployment = { path = "forge-core/crates/local-deployment" }
forge-core-server = { path = "forge-core/crates/server" }

# Codex dependencies from crates.io
codex-protocol = "0.63.0"
codex-app-server-protocol = "0.63.0"
codex-mcp-types = "0.63.0"

# Pin zerocopy to version compatible with nightly-2025-05-18
[patch.crates-io]
# zerocopy 0.8.31 (Nov 2025) uses stdarch_x86_avx512 which requires
# Rust features not available in the May 2025 nightly toolchain
zerocopy = { git = "https://github.com/google/zerocopy", tag = "v0.8.23" }


[profile.release]
debug = true
split-debuginfo = "packed"
strip = true

[profile.ci-test]
debug = 1         # Reduced debug symbols
inherits = "test"
opt-level = 0     # Fast compilation

[profile.ci-build]
debug = 1
inherits = "release"
opt-level = 2     # Faster than release's opt-level = 3
lto = "thin"      # Faster than "fat"
codegen-units = 16  # Parallel compilation
