[package]
name = "forge-deployment"
version = "0.3.10"
edition = "2024"

[dependencies]
forge-db = { path = "../forge-db" }
forge-utils = { path = "../forge-utils" }
forge-services = { path = "../forge-services" }
forge-executors = { path = "../forge-executors" }
async-trait = "0.1"
thiserror = { workspace = true } 
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
tracing = { workspace = true }
git2 = "^0.18.1"
futures = "0.3.31"
axum = { workspace = true }