[package]
name = "forge-server"
version = "0.3.10"
edition = "2024"
default-run = "forge-server"

[[bin]]
name = "forge-server"
path = "src/main.rs"

[lints.clippy]
uninlined-format-args = "allow"

[dependencies]
forge-deployment = { path = "../forge-deployment" }
forge-executors = { path = "../forge-executors" }
forge-local-deployment = { path = "../forge-local-deployment" }
forge-utils = { path = "../forge-utils" }
forge-db = { path = "../forge-db" }
forge-services = { path = "../forge-services" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true, features = ["serde-json-impl"]}
async-trait = "0.1"
command-group = { version = "5.0", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
openssl-sys = { workspace = true }
rmcp = { version = "0.5.0", features = ["server", "transport-io"] }
schemars = { workspace = true }
regex = "1.11.1"
toml = "0.8"
sentry = { version = "0.41.0", features = ["anyhow", "backtrace", "panic", "debug-images"] }
sentry-tracing = { version = "0.41.0", features = ["backtrace"] }
reqwest = { version = "0.12", features = ["json"] }
strip-ansi-escapes = "0.2.1"
thiserror = { workspace = true }
os_info = "3.12.0"
futures-util = "0.3"
ignore = "0.4"
git2 = "0.18"
mime_guess = "2.0"
rust-embed = "8.2"
octocrab = "0.44"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
dotenv = "0.15"
