[package]
name = "forge-branch-templates"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies will be added in Task 2
sqlx = { workspace = true }
anyhow.workspace = true
utils = { path = "../../crates/utils" }
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
ts-rs.workspace = true