[package]
name = "forge-extensions-branch-templates"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
utils = { path = "../../crates/utils" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
