[package]
name = "forge-config"
version = "0.8.7-rc.2"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
toml = "0.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
forge-omni = { path = "../omni" }
services = { git = "https://github.com/namastexlabs/forge-core.git", tag = "v0.8.7-rc.2" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
