[package]
name = "forge-extensions-omni"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }

# For TypeScript type generation
ts-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }